src/components/ui/Image.module.css
@import "../../vars.css";

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  transition: opacity 0.3s ease;
  font-size: 1.2rem;
}

.image {
  width: 100%;
  height: auto;
  display: block;
  transition: transform 0.3s ease;
}

.heroImage {
  border: 2px solid #ddd;
  border-radius: 50%;
  max-width: 180px;
  overflow: hidden;
}

.heroImage:hover {
  opacity: 0.8;
  transform: scale(1.05);
}

.imageWrapper {
  position: relative;
  width: 100%;
  height: 300px;
  overflow: hidden;
  border-radius: 10px;
  cursor: pointer;
}

.imageContainer {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 10px;
  transition: transform 0.3s ease;
}

.imageWrapper:hover .imageContainer {
  transform: scale(1.05);
}

.imageContainer:hover .image {
  transform: scale(1.1);
}

.imageContainer:hover .overlay {
  opacity: 1;
}

.viewImageOverlay {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: rgba(0, 0, 0, 0.6);
  color: white;
  padding: 10px 20px;
  border-radius: 10px;
  font-size: 1.2rem;
  opacity: 1;
  transition: opacity 0.3s ease;
}

.imageWrapper:hover .viewImageOverlay {
  opacity: 1;
}

.imageButton {
  background: none;
  border: none;
  padding: 0;
  width: 100%;
  height: 100%;
  display: block;
  cursor: pointer;
}

.imageCarousel {
  position: relative;
  width: 100%;
  height: 300px; /* Set a fixed height for the carousel */
  overflow: hidden;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  margin-bottom: 1rem;
}

.imageCarousel img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 10px;
  cursor: pointer;
  transition: transform 0.3s ease;
}

.imageCarousel img:hover {
  transform: scale(1.03);
}

.customArrow {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  z-index: 10;
  cursor: pointer;
  color: #333;
  background-color: rgba(255, 255, 255, 0.7);
  padding: 5px;
  border-radius: 50%;
  transition: background-color 0.3s ease;
}

.customArrow:hover {
  background-color: rgba(255, 255, 255, 1);
}

/* modal */
.modalImage {
  width: 100%;
  height: auto;
  max-width: 100%;
  max-height: 80vh;
  object-fit: contain;
  margin: 0 auto;
  display: block;
}

.modal-content {
  padding: 20px;
  text-align: center;
}

/* Slide */
.slide {
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: center;
  width: 100%;
}

.slideCounter {
  text-align: center;
  margin: 10px 0;
  font-size: 14px;
  color: #555;
}

/* Thumbnail Container */
.thumbnailContainer {
  display: flex;
  justify-content: center;
  gap: 8px;
  margin-top: 10px;
  flex-wrap: wrap;
}

/* Thumbnails */
.thumbnail {
  cursor: pointer;
  border: 2px solid transparent;
  transition: border-color 0.3s ease;
}

.thumbnail img {
  border-radius: 4px;
}

.activeThumbnail {
  border-color: #007bff;
}

/* Row */
.row {
  display: grid;
  grid-template-columns: repeat(3, 1fr); /* Three images per row */
  gap: 0.5rem; /* Add space between images */
}

@media (max-width: 768px) {
  .row {
    grid-template-columns: repeat(2, 1fr);
  }

  .heroImage {
    max-width: 130;
  }
}

@media (max-width: 480px) {
  .row {
    grid-template-columns: 1fr;
  }

  .heroImage {
    max-width: 130;
  }
}

